# xml-pipe

./: README.md  checkTls.hs  test.hs  test.xml  testWrite.hs  xml-pipe.cabal
examples/: indians.hs
others/: checkSep.hs  fromFile.hs
src/Text/XML/: Lexer.hs  Papillon.hs  Pipe.hs  XmlCreate.hs  XmlEvent.hs
