build-type:	Simple
cabal-version:	>= 1.8

name:		xml-pipe
version:	0.0.0.0
stability:	Experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>
homepage:	https://github.com/YoshikuniJujo/xml-pipe/wiki

license:	BSD3
license-file:	LICENSE

category:	XML
synopsis:	XML parser which uses simple-pipe
description:
    yet.

source-repository	head
    type:	git
    location:	git://github.com/YoshikuniJujo/xml-pipe.git

source-repository	this
    type:	git
    location:	git://github.com/YoshikuniJujo/xml-pipe.git
    tag:	xml-pipe-0.0.0.0

library
    hs-source-dirs:	src
    exposed-modules:	Text.XML.Pipe
    other-modules:
        Text.XML.XmlEvent, Text.XML.Lexer, Text.XML.Papillon, Text.XML.XmlCreate
    build-depends:
        base == 4.*, bytestring == 0.10.*, simple-pipe == 0.0.0.6,
        papillon == 0.0.88
    ghc-options:	-Wall
    extensions:		DoAndIfThenElse
